# StructureInNoise

./: .gitignore  BRISK.group.py  BRISK.py  FFT.py  FREAK.py  FeatureDetector.py  LICENSE  Makefile  ORB.py  RANSAC.py  README.md  SCORE.py  SIFT.py  TEST.py  compare-BRISK.py  fft-test.cpp  group-FREAK.py  group-ORB.py  group-SIFT.py  hashes.txt  hashtable-test.cpp  hotspot-BRISK.py  main-BRISK.py  main.py  matchrng.cpp  rb-BRISK.py  requirements.txt  rng2img.cpp  rng2img.sh  rng2noise.cpp  structure-in-noise.cpp  test-group.sh  test.sh  util.py
AnomalyDetection/: README.md  anomaly_proto.py
AnomalyDetection/anomaly_detection_1/: CMakeLists.txt  README.txt  requirements.txt
AnomalyDetection/anomaly_detection_1/models/vgg_gatys/: deploy.prototxt
AnomalyDetection/anomaly_detection_1/scripts/: visu_detection.py  visu_residual.py
AnomalyDetection/anomaly_detection_1/src/: CMakeLists.txt  anomaly_detection.sh  main_detection.cpp  main_model.cpp
AnomalyDetection/anomaly_detection_1/src/Utilities/: convert.py  decompose.py  load_network.py  output_from_network.py  project_pca_upper.py  visu.py
include/: bitshift.h  crop.h  float3.h  float4.h  hash2noise.h  hash2rgb.h  popcnt.h  ppm.h  random.h  uint.h  uint2.h  uint316.h  uint4.h  util.h
match/: .gitignore  Makefile  bitmatch.cpp  match.cpp  matchrng.cpp  test.sh
match/include/: bitshift.h  crop.h  hash2rgb.h  morton.h  ppm.h  print_pixel.h  uint3.h  util.h
results/: 3x3-pareto.csv  3x3.csv  4x4-pareto.csv  4x4.csv  5x5-pareto.csv  5x5.csv  6x6-pareto.csv  6x6.csv  7x7-pareto.csv  7x7.csv  8x8-pareto.csv  8x8.csv  all.csv  export-best-two-bitplanes.py  export-median-min-max-all-sort.py  export-median-pareto.py  export-median-timings.py  export-median.py  results.csv  timings.csv
results/bitplanes/: bitplanes.csv
results/group/: city.BRISK.txt  city.FREAK.txt  city.ORB.txt  city.SIFT.txt  city_linear.BRISK.txt  city_linear.FREAK.txt  city_linear.ORB.txt  city_linear.SIFT.txt  city_nested.BRISK.txt  city_nested.FREAK.txt  city_nested.ORB.txt  city_nested.SIFT.txt  devrandom.BRISK.txt  devrandom.FREAK.txt  devrandom.ORB.txt  devrandom.SIFT.txt  esgtsa_linear.BRISK.txt  esgtsa_linear.FREAK.txt  esgtsa_linear.ORB.txt  esgtsa_linear.SIFT.txt  esgtsa_nested.BRISK.txt  esgtsa_nested.FREAK.txt  esgtsa_nested.ORB.txt  esgtsa_nested.SIFT.txt  iqint1_linear.BRISK.txt  iqint1_linear.FREAK.txt  iqint1_linear.ORB.txt  iqint1_linear.SIFT.txt  iqint1_nested.BRISK.txt  iqint1_nested.FREAK.txt  iqint1_nested.ORB.txt  iqint1_nested.SIFT.txt  iqint2.BRISK.txt  iqint2.FREAK.txt  iqint2.ORB.txt  iqint2.SIFT.txt  iqint3.BRISK.txt  iqint3.FREAK.txt  iqint3.ORB.txt  iqint3.SIFT.txt  (+67 more)
results/matchrng2/: iqint2.matchrng.x0y-1208603514-w128h128-k3.ppm  iqint2.matchrng.x0y-1244389470-w128h128-k3.ppm  iqint2.matchrng.x0y-1492613718-w128h128-k3.ppm  iqint2.matchrng.x0y1162474721-w128h128-k3.ppm  iqint2.matchrng.x0y224273545-w128h128-k3.ppm  iqint2.matchrng.x0y299818398-w128h128-k3.ppm  iqint2.matchrng.x0y495816514-w128h128-k3.ppm  iqint2.matchrng.x0y862397261-w128h128-k3.ppm  jkiss32_linear.matchrng.x0y299818398-w128h128-k3.ppm  md5.matchrng.x0y-1208603514-w128h128-k3.ppm  md5.matchrng.x0y-1244389470-w128h128-k3.ppm  md5.matchrng.x0y-1492613718-w128h128-k3.ppm  md5.matchrng.x0y1162474721-w128h128-k3.ppm  md5.matchrng.x0y224273545-w128h128-k3.ppm  md5.matchrng.x0y299818398-w128h128-k3.ppm  md5.matchrng.x0y495816514-w128h128-k3.ppm  md5.matchrng.x0y862397261-w128h128-k3.ppm  pcg3d.matchrng.x0y-1208603514-w128h128-k3.ppm  pcg3d.matchrng.x0y-1244389470-w128h128-k3.ppm  pcg3d.matchrng.x0y-1492613718-w128h128-k3.ppm  pcg3d.matchrng.x0y1162474721-w128h128-k3.ppm  pcg3d.matchrng.x0y224273545-w128h128-k3.ppm  pcg3d.matchrng.x0y299818398-w128h128-k3.ppm  (+33 more)
results/quadrants/: quadrants.csv
rng2img/: .gitignore  Makefile  README.md  rng2img.cpp
utils/: combine-results.sh  csv2tex.sh  generate-bitplane-images.sh  generate-hash-images.sh  generate-noise-images.sh  test-all.sh
(+4564 files in other folders)
